--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 .vs/
+obj/
+bin/
 *.ide
 *.nupkg
 *.nuspec
 *.pdb
 *.log
 *.exe
-*.exe.config
 *.manifest
 *.cache
 *.copycomplete
 *.txt
 *.ide
 *.suo
+*.exe.config
