--- a/LilaSharp/LilaSharp.csproj
+++ b/LilaSharp/LilaSharp.csproj
@@ -1,231 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6DB745E7-34D8-4CEA-8AEF-B7BA96005787}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>LilaSharp</RootNamespace>
-    <AssemblyName>LilaSharp</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>bin\Debug\LilaSharp.xml</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\LilaSharp.xml</DocumentationFile>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack, Version=1.7.2.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.7.2\lib\Net45\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <HintPath>..\packages\NLog.4.4.1\lib\net45\NLog.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Net.Http" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.57" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NLog" Version="5.2.8" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="API\GameForm.cs" />
-    <Compile Include="API\HookResult.cs" />
-    <Compile Include="API\Response.cs" />
-    <Compile Include="API\SeekResponse.cs" />
-    <Compile Include="Delegates\LilaEventHandler.cs" />
-    <Compile Include="Internal\SocketDisconnectArgs.cs" />
-    <Compile Include="Internal\TypeDelegate.cs" />
-    <Compile Include="Messages\ITypeMessage.cs" />
-    <Compile Include="Messages\MGone.cs" />
-    <Compile Include="Messages\MVersion.cs" />
-    <Compile Include="Packets\PStartWatching.cs" />
-    <Compile Include="Types\Speed.cs" />
-    <Compile Include="Events\ChallengesEvent.cs" />
-    <Compile Include="Events\ConnectEvent.cs" />
-    <Compile Include="Events\DisconnectEvent.cs" />
-    <Compile Include="Events\TournamentEvent.cs" />
-    <Compile Include="Events\HookEvent.cs" />
-    <Compile Include="Events\JoinGameEvent.cs" />
-    <Compile Include="Events\LilaEvent.cs" />
-    <Compile Include="Events\LilaGameEvent.cs" />
-    <Compile Include="Events\LilaGameMoveEvent.cs" />
-    <Compile Include="Events\TournamentsEvent.cs" />
-    <Compile Include="Messages\MFollowingOnlines.cs" />
-    <Compile Include="Messages\MFollowingPlaying.cs" />
-    <Compile Include="Messages\MFollowingStoppedPlaying.cs" />
-    <Compile Include="Types\IHook.cs" />
-    <Compile Include="Events\LatencyEvent.cs" />
-    <Compile Include="Internal\ResourceType.cs" />
-    <Compile Include="Delegates\LilaCallback.cs" />
-    <Compile Include="LilaClient.cs" />
-    <Compile Include="LilaDebug.cs" />
-    <Compile Include="LilaEvents.cs" />
-    <Compile Include="LilaGame.cs" />
-    <Compile Include="LilaMove.cs" />
-    <Compile Include="LilaPing.cs" />
-    <Compile Include="LilaRandom.cs" />
-    <Compile Include="LilaRequest.cs" />
-    <Compile Include="LilaResponse.cs" />
-    <Compile Include="LilaRoutes.cs" />
-    <Compile Include="LilaSettings.cs" />
-    <Compile Include="LilaSocket.cs" />
-    <Compile Include="Internal\EventTimer.cs" />
-    <Compile Include="LilaTournament.cs" />
-    <Compile Include="Internal\Message.cs" />
-    <Compile Include="Internal\MessageHandler.cs" />
-    <Compile Include="Messages\IVersionedMessage.cs" />
-    <Compile Include="Messages\MAck.cs" />
-    <Compile Include="Messages\MBerserk.cs" />
-    <Compile Include="Messages\MCheckCount.cs" />
-    <Compile Include="Messages\MClock.cs" />
-    <Compile Include="Messages\MClockIncrement.cs" />
-    <Compile Include="Messages\MCrowd.cs" />
-    <Compile Include="Messages\MDeployPre.cs" />
-    <Compile Include="Messages\MEnd.cs" />
-    <Compile Include="Messages\MEndData.cs" />
-    <Compile Include="Messages\MFeatured.cs" />
-    <Compile Include="Messages\MGameMessages.cs" />
-    <Compile Include="Messages\MChallenges.cs" />
-    <Compile Include="Messages\MHooks.cs" />
-    <Compile Include="Messages\MHookSync.cs" />
-    <Compile Include="Messages\MMessage.cs" />
-    <Compile Include="Messages\MMove.cs" />
-    <Compile Include="Messages\MNewHook.cs" />
-    <Compile Include="Messages\MReloadForum.cs" />
-    <Compile Include="Messages\MReloadTimeline.cs" />
-    <Compile Include="Messages\MRoundRedirect.cs" />
-    <Compile Include="Messages\MReload.cs" />
-    <Compile Include="Messages\MReloadSeeks.cs" />
-    <Compile Include="Messages\MRemovedHooks.cs" />
-    <Compile Include="Messages\MResync.cs" />
-    <Compile Include="Messages\MServerLatency.cs" />
-    <Compile Include="Messages\MSimuls.cs" />
-    <Compile Include="Messages\MStreams.cs" />
-    <Compile Include="Messages\MTakebackOffer.cs" />
-    <Compile Include="Messages\MTournamentRedirect.cs" />
-    <Compile Include="Messages\MTournamentReminder.cs" />
-    <Compile Include="Messages\MTournaments.cs" />
-    <Compile Include="Messages\IMessage.cs" />
-    <Compile Include="Messages\MPong.cs" />
-    <Compile Include="Internal\PacketResolver.cs" />
-    <Compile Include="Messages\MTournamentStandings.cs" />
-    <Compile Include="Packets\PData.cs" />
-    <Compile Include="Packets\PHookIn.cs" />
-    <Compile Include="Packets\PIdle.cs" />
-    <Compile Include="Packets\Packet.cs" />
-    <Compile Include="Packets\PJoin.cs" />
-    <Compile Include="Packets\PMove.cs" />
-    <Compile Include="Packets\PP.cs" />
-    <Compile Include="Packets\PPing.cs" />
-    <Compile Include="Packets\PPingVersion.cs" />
-    <Compile Include="Packets\PServerLatency.cs" />
-    <Compile Include="Packets\PTalk.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Internal\StringEngine.cs" />
-    <Compile Include="Internal\TaskSocket.cs" />
-    <Compile Include="API\Seek.cs" />
-    <Compile Include="Types\Challenge.cs" />
-    <Compile Include="Types\Challenger.cs" />
-    <Compile Include="Types\ChallengesData.cs" />
-    <Compile Include="Types\Chat.cs" />
-    <Compile Include="Types\ChatData.cs" />
-    <Compile Include="Types\CheckCount.cs" />
-    <Compile Include="Types\Clock.cs" />
-    <Compile Include="Types\Board.cs" />
-    <Compile Include="Types\ClockData.cs" />
-    <Compile Include="Types\ClockIncrement.cs" />
-    <Compile Include="Types\CrowdData.cs" />
-    <Compile Include="Types\EndClock.cs" />
-    <Compile Include="Types\EndData.cs" />
-    <Compile Include="Types\EndStatus.cs" />
-    <Compile Include="Types\Featured.cs" />
-    <Compile Include="Types\FeaturedData.cs" />
-    <Compile Include="Types\GameData.cs" />
-    <Compile Include="Types\I18n.cs" />
-    <Compile Include="Types\LobbyHook.cs" />
-    <Compile Include="Types\MessageData.cs" />
-    <Compile Include="Types\MoveData.cs" />
-    <Compile Include="Types\Opening.cs" />
-    <Compile Include="Types\Perf.cs" />
-    <Compile Include="Types\Perfs.cs" />
-    <Compile Include="Types\Permissions.cs" />
-    <Compile Include="Types\Player.cs" />
-    <Compile Include="Types\PlayerData.cs" />
-    <Compile Include="Types\PlayerPerf.cs" />
-    <Compile Include="Types\PlayerStanding.cs" />
-    <Compile Include="Types\Pref.cs" />
-    <Compile Include="Types\Promotion.cs" />
-    <Compile Include="Types\Redirect.cs" />
-    <Compile Include="Types\ReloadData.cs" />
-    <Compile Include="Types\ReminderData.cs" />
-    <Compile Include="Types\Round.cs" />
-    <Compile Include="Types\ServerHook.cs" />
-    <Compile Include="Types\Sheet.cs" />
-    <Compile Include="Types\PageStandings.cs" />
-    <Compile Include="Types\Status.cs" />
-    <Compile Include="Types\Step.cs" />
-    <Compile Include="Types\TakebackData.cs" />
-    <Compile Include="Types\TimeControl.cs" />
-    <Compile Include="Types\Tournament.cs" />
-    <Compile Include="Types\TournamentData.cs" />
-    <Compile Include="Types\TournamentHtmlEntry.cs" />
-    <Compile Include="Types\TournamentPlayer.cs" />
-    <Compile Include="Types\TournamentPlayerStatus.cs" />
-    <Compile Include="Types\Url.cs" />
-    <Compile Include="Types\User.cs" />
-    <Compile Include="Types\Variant.cs" />
-    <Compile Include="Types\Verdicts.cs" />
-    <Compile Include="Types\Watchers.cs" />
-    <Compile Include="Internal\ThreadSocket.cs" />
-    <Compile Include="Internal\WebSocketBase.cs" />
-    <Compile Include="Internal\WebSocketInternal.cs" />
-    <Compile Include="Internal\WebSocketTask.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="log_config.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
